--- a/mkregs.conf
+++ b/mkregs.conf
@@ -1,4 +1,4 @@
 //START_SWREG_TABLE pcie
-IOB_SWREG_W(PCIE_DATA_IN, 4, 0, -1, 0) //TO TEST value sent
-IOB_SWREG_R(PCIE_DATA_OUT, 4, 0, -1, 0) //TO TEST value GET
+IOB_SWREG_W(PCIE_TX_DATA, 4, 0, -1, 0) //TO TEST value sent
+IOB_SWREG_R(PCIE_RX_DATA, 4, 0, -1, 0) //TO TEST value GET
 
