cpu multiplies the values and sends to periph
cpu multiplies the the number that has been recieved from the pcie and riffa then sends it back to the peripheral and then when the riffa c code is initialized to get the results the results from the multiplied number is sent one by one subtracting it to the pcie and riffa

--- a/mkregs.conf
+++ b/mkregs.conf
@@ -1,4 +1,5 @@
 //START_SWREG_TABLE pcie
 IOB_SWREG_W(PCIE_TX_DATA, 4, 0, -1, 0) //TO TEST value sent
 IOB_SWREG_R(PCIE_RX_DATA, 4, 0, -1, 0) //TO TEST value GET
+IOB_SWREG_R(PCIE_RX_DATA1, 4, 0, -1, 0) //TO TEST value GET
 
