the peripheral changed to work with software

--- a/mkregs.conf
+++ b/mkregs.conf
@@ -1,5 +1,14 @@
 //START_SWREG_TABLE pcie
-IOB_SWREG_W(PCIE_TX_DATA, 4, 0, -1, 0) //TO TEST value sent
-IOB_SWREG_R(PCIE_RX_DATA, 4, 0, -1, 0) //TO TEST value GET
-IOB_SWREG_R(PCIE_RX_DATA1, 4, 0, -1, 0) //TO TEST value GET
+IOB_SWREG_W(TX_DATAH, 4, 0, -1, 0) //Higher TX word 
+IOB_SWREG_W(TX_DATAL, 4, 0, -1, 0) //Lower TX word 
+IOB_SWREG_W(TX_DATA_VALID, 1, 0, -1, 0) //TX data is valid
+IOB_SWREG_W(TX_CHNL, 1, 0, -1, 0) //TX data is valid
+IOB_SWREG_W(RX_LEN_ACK, 1, 0, -1, 0) //Acknowledge length reception
+IOB_SWREG_W(TX_LEN, 4, 0, -1, 0) //Length of 64-bit stream
 
+IOB_SWREG_R(RX_DATAH, 4, 0, -1, 0) //Higher RX word 
+IOB_SWREG_R(RX_DATAL, 4, 0, -1, 0) //Lower RX word
+IOB_SWREG_R(TX_DATA_VALID, 1, 0, -1, 0) //TX data is valid
+IOB_SWREG_R(RX_LEN, 4, 0, -1, 0) //Length of 64-bit stream
+IOB_SWREG_R(TX_LEN_VALID, 1, 0, -1, 0) //RX data is valid
+IOB_SWREG_R(TX_DATA_REN, 1, 0, -1, 0) //TX data read enable
