--- a/mkregs.conf
+++ b/mkregs.conf
@@ -1,14 +1,17 @@
 //START_SWREG_TABLE pcie
-IOB_SWREG_W(TX_DATAH, 4, 0, -1, 0) //Higher TX word 
-IOB_SWREG_W(TX_DATAL, 4, 0, -1, 0) //Lower TX word 
-IOB_SWREG_W(TX_DATA_VALID, 1, 0, -1, 0) //TX data is valid
-IOB_SWREG_W(TX_CHNL, 1, 0, -1, 0) //TX data is valid
-IOB_SWREG_W(RX_LEN_ACK, 1, 0, -1, 0) //Acknowledge length reception
-IOB_SWREG_W(TX_LEN, 4, 0, -1, 0) //Length of 64-bit stream
+IOB_SWREG_W(_TXCHNL_DATAH, 4, 0, -1, 0) //Higher TX word 
+IOB_SWREG_W(_TXCHNL_DATAL, 4, 0, -1, 0) //Lower TX word 
+IOB_SWREG_W(_TXCHNL_DATA_VALID, 1, 0, -1, 0) //TX data is valid
+IOB_SWREG_W(_TXCHNL, 1, 0, -1, 0) // we have data on tx 
+IOB_SWREG_W(_TXCHNL_LEN, 4, 0, -1, 0) //Length of 64-bit stream
 
-IOB_SWREG_R(RX_DATAH, 4, 0, -1, 0) //Higher RX word 
-IOB_SWREG_R(RX_DATAL, 4, 0, -1, 0) //Lower RX word
-IOB_SWREG_R(TX_DATA_VALID, 1, 0, -1, 0) //TX data is valid
-IOB_SWREG_R(RX_LEN, 4, 0, -1, 0) //Length of 64-bit stream
-IOB_SWREG_R(TX_LEN_VALID, 1, 0, -1, 0) //RX data is valid
-IOB_SWREG_R(TX_DATA_REN, 1, 0, -1, 0) //TX data read enable
+IOB_SWREG_R(_TXCHNL_LEN_VALID, 1, 0, -1, 0) //RX data is valid
+IOB_SWREG_R(_TXCHNL_DATA_REN, 1, 0, -1, 0) //TX chnl data send enable
+
+IOB_SWREG_R(_RXCHNL_DATAH, 4, 0, -1, 0) //Higher RX word 
+IOB_SWREG_R(_RXCHNL_DATAL, 4, 0, -1, 0) //Lower RX word
+IOB_SWREG_W(_RXCHNL_ACK, 1, 0, -1, 0) //Acknowledge length reception
+IOB_SWREG_W(_RXCHNL_DATA_REN, 1, 0, -1, 0) //Acknowledge READ
+IOB_SWREG_R(_RXCHNL_LEN, 4, 0, -1, 0) //Length of 64-bit stream
+IOB_SWREG_R(_RXCHNL_DATA_VALID, 1, 0, -1, 0) // rx data is valid 
+IOB_SWREG_R(_RXCHNL, 1, 0, -1, 0) // rx chnl is enabled 
