fixed some issues regarding fifos

--- a/mkregs.conf
+++ b/mkregs.conf
@@ -10,6 +10,10 @@ IOB_SWREG_R(_TXCHNL_DATA_REN, 1, 0, -1, 0) //TX chnl data send enable
 
 IOB_SWREG_R(_RXCHNL_DATA, 4, 0, -1, 0) //Higher RX word 
 
+IOB_SWREG_R(_wait_to_read, 1, 0, -1, 0) //wait to read from cpu
+
+
+
 IOB_SWREG_W(_RXCHNL_ACK, 1, 0, -1, 0) //Acknowledge length reception
 IOB_SWREG_W(_RXCHNL_DATA_REN, 1, 1, -1, 0) //Acknowledge READ
 IOB_SWREG_R(_RXCHNL_LEN, 4, 0, -1, 0) //Length of 64-bit stream
