--- a/mkregs.conf
+++ b/mkregs.conf
@@ -1,21 +1,7 @@
 //START_SWREG_TABLE pcie
 IOB_SWREG_W(_TXCHNL_DATA, 4, 0, -1, 0) //Higher TX word 
-
-IOB_SWREG_W(_TXCHNL_DATA_VALID, 1, 0, -1, 0) //TX data is valid
-IOB_SWREG_W(_TXCHNL, 1, 0, -1, 0) // we have data on tx 
-IOB_SWREG_W(_TXCHNL_LEN, 4, 0, -1, 0) //Length of 64-bit stream
-
-IOB_SWREG_R(_TXCHNL_LEN_VALID, 1, 0, -1, 0) //RX data is valid
-IOB_SWREG_R(_TXCHNL_DATA_REN, 1, 0, -1, 0) //TX chnl data send enable
+IOB_SWREG_W(_TXCHNL_LEN, 4, 0, -1, 0) //Length of TX 64-bit stream
 
 IOB_SWREG_R(_RXCHNL_DATA, 4, 0, -1, 0) //Higher RX word 
+IOB_SWREG_R(_RXCHNL_LEN, 4, 0, -1, 0) //Length of RX 64-bit stream
 
-IOB_SWREG_R(_wait_to_read, 1, 0, -1, 0) //wait to read from cpu
-
-
-
-IOB_SWREG_W(_RXCHNL_ACK, 1, 0, -1, 0) //Acknowledge length reception
-IOB_SWREG_W(_RXCHNL_DATA_REN, 1, 1, -1, 0) //Acknowledge READ
-IOB_SWREG_R(_RXCHNL_LEN, 4, 0, -1, 0) //Length of 64-bit stream
-IOB_SWREG_R(_RXCHNL_DATA_VALID, 1, 0, -1, 0) // rx data is valid 
-IOB_SWREG_R(_RXCHNL, 1, 0, -1, 0) // rx chnl is enabled 
